# mlapibot

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  models.py  ocr.py  pyproject.toml  requirements.txt  run.py  scam.py  test.py  webhook.py
.github/workflows/: python-app.yml
data/: .gitignore  scams.json  template.md
data/templates/: 2fa.md  accountreport.md  ageRestricted.md  anarchy.md  base.md  chainspam.md  crash.md  customStatusIcon.md  default.md  doneReading.md  homeNotification.md  imageMalware.md  install.md  joinServers.md  jokeMessage.md  libraryMalware.md  macKeybinds.md  malwareLink.md  phone.md  sed.md  serverBanAppeal.md  status.md  steamreport.md  timestamp.md  trojan.md  tryGameMalware.md  verifyscam.md
mlapi/: cli.py  main.py  mlapi.psproj  ocr.py  summary.json  test.py  webhook.py
mlapi/data/: .gitignore  history.json  history.txt  praw.ini  save.txt  scams.json  webhook.txt
mlapi/data/templates/: 2fa.md  accountreport.md  activity.md  anarchy.md  bdCrash.md  bitlyMalware.md  chainspam.md  cloudflareblock.md  default.md  discordreport.md  homeNotification.md  imageMalware.md  install.md  jokeMessage.md  libraryMalware.md  macKeybinds.md  messageError.md  phone.md  sed.md  serverBanAppeal.md  status.md  steam.md  steamreport.md  trojan.md  verifyscam.md
mlapi/main/: __init__.py  data.py  reddit.py
mlapi/models/: fileguard.py  openthendelete.py  response_builder.py  scam.py  status.py  texthighlight.py  words.py
mlapi/models/scams/: __init__.py  funcscam.py  imgscam.py  ocrscam.py  textscam.py
models/: Scam.py  ScamEncoder.py
src/: context.rs  error.rs  main.rs  statics.rs  url.rs  utils.rs  webhook.rs
src/analysis/: func_analyzer.rs  mod.rs  pattern_analyzer.rs  str_analyzer.rs
src/analysis/str_matchers/: all.rs  any.rs  exact.rs  mod.rs  ordered.rs  phrase.rs
src/imgur/: album.rs  image.rs  mod.rs
src/ocr/: image.rs  mod.rs  word.rs
src/reddit/: config.rs  flairs.rs  mod.rs  ratelimiter.rs  seen_tracker.rs  status_tracker.rs  subreddit.rs
src/utils/: lowercase.rs  mod.rs  submission_ext.rs  words.rs
