[package]
name = "mlapibot"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.28"
anyhow = "1.0.86"
image = { version = "0.25.1", default-features = false, features = [
    "png",
    "jpeg",
] }
imageproc = { version = "0.25.0", default-features = false }
leptess = "0.14.0"
regex = "1.10.5"
roux = { git = "https://github.com/CheAle14/roux.git", features = ["blocking"] }
ord-many = { git = "https://github.com/CheAle14/ord-many.git" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.5.9", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "derive",
] }
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
tempfile = "3.10.1"
tera = { version = "1.20.0", default-features = false }
statuspage = { git = "https://github.com/CheAle14/statuspage.git" }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
strsim = "0.11.1"
rouille = "3.6.2"
