[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "mlapibot"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "opencv-python",
    "praw==7.7.*",
    "pytesseract",
    "python-dateutil",
    "pytz",
    "requests",
    "urllib3",
    "imgurpython",
    "strsimpy",
    "typing_extensions"
]

[project.scripts]
mlapibot-watch = "mlapi.cli:watch"
mlapibot-check = "mlapi.cli:check"
mlapibot-test = "mlapi.cli:test"

[tool.setuptools.package-data]
mlapi = ["data/scams.json", "data/templates/*.md"]

[tool.setuptools.dynamic]
version = {attr = "mlapi.__version__"}